[gd_scene load_steps=23 format=3 uid="uid://4ypdmnoesa32"]

[ext_resource type="Script" path="res://item/side_door.gd" id="1_fresu"]
[ext_resource type="Texture2D" uid="uid://bsctn48ejspn1" path="res://assets/objects/Doors/Sidedoor/DoorOpen.png" id="1_ws2c1"]
[ext_resource type="Texture2D" uid="uid://dyvp73l55idh2" path="res://assets/objects/Doors/Sidedoor/DoorClose.png" id="2_uji2r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gdq2b"]
atlas = ExtResource("1_ws2c1")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxak6"]
atlas = ExtResource("1_ws2c1")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0mj8"]
atlas = ExtResource("1_ws2c1")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn1pd"]
atlas = ExtResource("1_ws2c1")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe5c8"]
atlas = ExtResource("1_ws2c1")
region = Rect2(256, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x20xf"]
atlas = ExtResource("1_ws2c1")
region = Rect2(320, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_au10y"]
atlas = ExtResource("1_ws2c1")
region = Rect2(384, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv3ut"]
atlas = ExtResource("1_ws2c1")
region = Rect2(448, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6uoj"]
atlas = ExtResource("1_ws2c1")
region = Rect2(512, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_foj7i"]
atlas = ExtResource("2_uji2r")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg0jt"]
atlas = ExtResource("2_uji2r")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wswqn"]
atlas = ExtResource("2_uji2r")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ucy"]
atlas = ExtResource("2_uji2r")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_disw5"]
atlas = ExtResource("2_uji2r")
region = Rect2(256, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8h0r"]
atlas = ExtResource("2_uji2r")
region = Rect2(320, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjt2q"]
atlas = ExtResource("2_uji2r")
region = Rect2(384, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3cvy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdq2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxak6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0mj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn1pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe5c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x20xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au10y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv3ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6uoj")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_foj7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg0jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wswqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ucy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_disw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8h0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjt2q")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_152ky"]
size = Vector2(64, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6ba3"]
size = Vector2(128, 112)

[node name="SideDoor" type="StaticBody2D"]
collision_layer = 8
script = ExtResource("1_fresu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_g3cvy")
animation = &"close"
autoplay = "close"
frame = 8
frame_progress = 1.0
offset = Vector2(16, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, -48)
shape = SubResource("RectangleShape2D_152ky")

[node name="AreaDetectPlayer" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectPlayer"]
position = Vector2(32, -56)
shape = SubResource("RectangleShape2D_d6ba3")
debug_color = Color(0.441, 0.7, 0.53165, 0.0784314)

[connection signal="body_entered" from="AreaDetectPlayer" to="." method="_on_area_detect_player_body_entered"]
[connection signal="body_exited" from="AreaDetectPlayer" to="." method="_on_area_detect_player_body_exited"]
